# Haskelltracer

./: .gitignore  README.md  haskelltracer.cabal  out.pnm  run.sh  utracer.hs
PNM/: Pnm.hi  Pnm.hs  pnm.hs
doc/: interfaces.md
src/: .gitignore  Camera.hs  Color.hs  Haskelltracer.hs  Light.hs  Main.hs  Material.hs  Math.hs  Plane.hs  Pnm.hs  Polygon.hs  Ray.hs  Renderer.hs  Shape.hs  Sphere.hs  Tracer.hs  Triangle.hs  Utils.hs  Vector.hs  compile.sh  haskelltracer.hs  out.pnm  parser.hs  utracer  utracer-compile.sh  utracer.hi  utracer.hs
src/PNM/: Pnm.hi
src/utracer-src/: defpovray  test.pov  utracer-run.sh  utracer.hs
src/utracer-src/PNM/: Pnm.hs  pngconvert.sh
