cabal-version:      >= 1.6
build-type:         Simple
name:               haskelltracer
version:            0.0
synopsis:           a ray tracer written in haskell

executable haskelltracer
    build-depends:      base--, parsec, deepseq, parallel
    hs-source-dirs:     src
    main-is:            Main.hs
